[package]
name = "aoc15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.9"
anyhow = "1.0.71"
text_io = "0.1.12"
md-5 = "0.10.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
